--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@300&display=swap");
 
 body {
   font-family: "Comfortaa", cursive;
+}
+
+.ledger {
+  color: blue;
+  /* font-family: font-family: 'Azeret Mono', monospace; */
 }
