--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,26 @@
 
 body {
   font-family: "Comfortaa", cursive;
+  text-align: center;
+}
+nav ul {
+  width: 100%;
+}
+nav ul li {
+  /* float: left; */
+  display: inline-block;
+  padding: 15px;
+  margin: 0% 2% 0% 2%;
+  /* margin-left: auto; */
+}
+
+/* nav ul li a {
+} */
+
+img {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 /* Sales Ledger formmating */
@@ -15,6 +35,13 @@ section.ledger {
 section.ledger h2 {
   font-size: 18px;
   margin-bottom: 5px;
+}
+
+section.ledger ul {
+  /* display: block; */
+  margin-right: auto;
+  margin-left: auto;
+  width: 210px;
 }
 
 section.ledger ul li {
