--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,15 @@
 body {
   font-family: "Comfortaa", cursive;
   text-align: center;
-  background-color: cornflowerblue;
+  background-color: #f4a698;
 }
 
 nav {
   position: fixed;
+  top: 0;
   width: 100%;
-  background-color: aliceblue;
+  height: 50px;
+  background-color: #f48668;
 }
 
 nav ul li {
@@ -29,12 +31,24 @@ img {
   margin-right: auto;
   margin-left: auto;
 }
+
 main {
   display: block;
   width: 1000px;
   margin-right: auto;
   margin-left: auto;
+  background-color: #c5c392;
 }
+
+h1 {
+  font-size: 30px;
+  font-weight: bolder;
+}
+
+section.ourstory {
+  margin-top: 50px;
+}
+
 section.locations {
   display: block;
 }
@@ -42,13 +56,40 @@ section.locations {
 .locationbanner {
   display: inline-block;
   width: 250px;
-  height: 400px;
+  height: 275px;
+  margin: 15px;
 }
 
-.locations img {
+h2 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.locationbanner img {
   width: 90%;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 10px auto;
+}
+
+.locationbanner p {
+  margin-bottom: 5px;
+}
+
+section.merch {
+  display: block;
+}
+
+.merchbanner {
+  display: inline-block;
+  height: 300px;
+}
+
+.merchbanner img {
+  height: 250px;
+  margin: 15px;
+}
+
+footer img {
+  height: 40px;
 }
 
 /* Sales Ledger formmating */
