--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap");
+/*font-family: 'Roboto Slab', serif;*/
+
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+img {
+  border-radius: 4px;
+}
 
 body {
   font-family: "Comfortaa", cursive;
   text-align: center;
-  background-color: #f4a698;
+  /* background-color: #f4a698; */
+  background-color: #c5c392;
+}
+
+p {
+  font-family: "Roboto Slab", serif;
+  font-weight: lighter;
+  color: #451f00;
 }
 
 nav {
@@ -14,35 +33,80 @@ nav {
   background-color: #f48668;
 }
 
+nav img {
+  height: 40px;
+}
+
+nav ul {
+  display: block;
+  margin: 0 auto;
+  width: 1020px;
+}
+
 nav ul li {
   /* float: left; */
-  display: inline-block;
   padding: 15px;
   margin: 0% 2% 0% 2%;
   /* margin-left: auto; */
 }
 
-img {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-}
-
 main {
   display: block;
-  width: 1000px;
+  width: 1020px;
   margin-right: auto;
   margin-left: auto;
   background-color: #c5c392;
 }
 
 h1 {
+  padding: 15px;
+  font-size: 48px;
+  font-weight: bolder;
+}
+
+.ourstory > img {
+  padding: 15px;
+  border: 2px solid #f48668;
+}
+
+h2 {
+  padding: 15px;
   font-size: 30px;
   font-weight: bolder;
 }
 
 section.ourstory {
   margin-top: 50px;
+}
+
+.ourstory > p {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 15px;
+  margin-bottom: 15px;
+  width: 820px;
+  background-color: #bbb989;
+  border-radius: 8px;
+  line-height: 1.4em;
+}
+
+.process {
+  width: 310px;
+  height: 295px;
+  background-color: #bbb989;
+  border-radius: 8px;
+}
+
+.process img {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.process p {
+  display: inline-block;
+  margin: 0 auto;
+  width: 276px;
 }
 
 section.locations {
@@ -54,11 +118,14 @@ section.locations {
   width: 250px;
   height: 275px;
   margin: 15px;
+  background-color: #bbb989;
+  border-radius: 8px;
 }
 
-h2 {
+h3 {
   font-size: 24px;
   font-weight: bold;
+  padding-top: 15px;
 }
 
 .locationbanner img {
@@ -77,6 +144,8 @@ section.merch {
 .merchbanner {
   display: inline-block;
   height: 300px;
+  background-color: #bbb989;
+  border-radius: 8px;
 }
 
 .merchbanner img {
@@ -84,6 +153,12 @@ section.merch {
   margin: 15px;
 }
 
-footer img {
+footer {
+  background-color: #f48668;
   height: 40px;
+  margin-top: 10px;
+}
+
+footer ul li {
+  margin-top: 10px;
 }
